# ezRETS

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.in  Makefile.osx  Makefile.vc  NEWS  README  aclocal.m4  configure.ac  index.html
doc/: DNSless_ConnectionString.txt  DSNless_ConnectionString.txt  INSTALL.Win32.txt  INSTALL.linux.txt  SQL.support.html  SQL_Reference.html
doc/ExcelTutorial/: ExcelTutorial.html
documentation/: index.html
documentation/CMAExample/: CMAExample.html
documentation/ExcelTutorial/: index.html
documentation/InstallTutorial/: ezRETSSetup.html
downloads/: index.html
project/common/include/: DataSource.h  EzRetsException.h  commonfwd.h  config.h.in  ezrets.h  memberfn.h  str_stream.h  winundef.h
project/common/src/: .gitignore  CMakeLists.txt  DataSource.cpp  EzRetsException.cpp  Makefile.vc
project/ddlgenerator/include/: DefinitionGenerator.h  GUIMain.h
project/ddlgenerator/src/: CommandLineMain.cpp  DefinitionGenerator.cpp  GUIMain.cpp
project/driver/include/: AbstractHandle.h  BinaryObjectQuery.h  ColAttributeHelper.h  Column.h  ColumnMetadataQuery.h  DataCountQuery.h  DataQuery.h  DataStreamInfo.h  DataTranslationException.h  DataTranslator.h  DateTimeFormatException.h  Descriptors.h  Error.h  EzLogger.h  EzLookupColumnsQuery.h  EzLookupQuery.h  EzRetsErrorHandler.h  EzRetsSqlMetadata.h  GetConnectAttrHelper.h  GetInfoHelper.h  MetadataQuery.h  MetadataView.h  ObjectQuery.h  OdbcEntry.h  OdbcGetObjectException.h  OdbcSqlException.h  OnDemandDataQuery.h  OnDemandObjectQuery.h  OnDemandObjectResultSet.h  OnDemandResultSet.h  PrimaryKeysMetadataQuery.h  Query.h  ResultSet.h  RetsDBC.h  RetsENV.h  RetsSTMT.h  RetsSTMTResults.h  SQLAllocEnv.h  SQLFreeEnv.h  SpecialColumnsMetadataQuery.h  (+11 more)
project/driver/src/: .gitignore  AbstractHandle.cpp  BinaryObjectQuery.cpp  ColAttributeHelper.cpp  Column.cpp  ColumnMetadataQuery.cpp  DataCountQuery.cpp  DataQuery.cpp  DataStreamInfo.cpp  DataTranslationException.cpp  DataTranslator.cpp  DataTranslatorFactory.cpp  DateTimeFormatException.cpp  DbcEntries.cpp  DescEntries.cpp  Descriptors.cpp  EnvEntries.cpp  Error.cpp  EzLogger.cpp  EzLookupColumnsQuery.cpp  EzLookupQuery.cpp  EzRetsErrorHandler.cpp  EzRetsSqlMetadata.cpp  GetConnectAttrHelper.cpp  GetInfoHelper.cpp  GetTypeName.cpp  Makefile.vc  MetadataView.cpp  NotImplemented.cpp  ObjectQuery.cpp  OdbcEntry.cpp  OdbcGetObjectException.cpp  OdbcSqlException.cpp  OnDemandDataQuery.cpp  OnDemandObjectQuery.cpp  OnDemandObjectResultSet.cpp  OnDemandResultSet.cpp  PrimaryKeysMetadataQuery.cpp  Query.cpp  ResultSet.cpp  (+26 more)
project/examples/cpp/include/: DBHelper.h  DBHelperException.h  ResultColumn.h
project/examples/cpp/src/: ADODebug.cpp  ColumnsTest.cpp  DBHelper.cpp  DBHelperException.cpp  ExecuteQuery.cpp  FloatError.cpp  Makefile.vc  NoDsn.cpp  NoWhereSearch.cpp  PrimaryKeys.cpp  ResultColumn.cpp  SQLDriverConnectTest.cpp  SQLPrepareOnly.cpp  SimpleGetData.cpp  SimpleSearch.cpp  TablesTest.cpp
project/examples/include/: DBHelper.h  ResultColumn.h  example_sql.h
project/examples/php/: MetadataViewer.php  SimpleSearch.php  SimpleSearchLongDump.php  getTypeInfo.php
project/examples/ruby/: GenericSearch.rb  GetObject.rb  MetadataBrowse.rb  SimpleSearch.rb
project/examples/src/: ColumnsTest.cpp  ConnectTest.cpp  ForcedError.cpp  ResultColumn.cpp  TablesTest.cpp
project/examples/vbscript/: GetObject.vbs  decimal.vbs  test.vbs
project/installer/include/: RegisterFuncs.h
project/installer/scripts/osx/: postupgrade
project/installer/src/: .gitignore  Makefile  Makefile.vc  RegisterDriver.cpp  RegisterFuncs.cpp  TestReregister.cpp
project/setup/include/: DataSourceValidator.h  DllMain.h  Setup.h  SetupApp.h  SetupDialog.h  SetupLog.h  SqlInstallerException.h  TextValueSizer.h  resource.h
project/setup/src/: .gitignore  ConfigDSN.cpp  DataSourceValidator.cpp  DllMain.cpp  Makefile.vc  Setup.cpp  SetupApp.cpp  SetupDialog.cpp  SetupLog.cpp  SqlInstallerException.cpp  TextValueSizer.cpp  UnixInit.cpp  ezretss.def  ezretss.rc  ezretss.rc.in  ezretss.xpm  logo.xcf  logo.xpm  testApp.cpp  testApp.rc
project/tools/: .gitignore  GetTypeName.r.cpp  Makefile  gettypename_gen.rb  sql_defines.r.cpp  sql_defines_gen.rb
support/: index.html
