IF (LIBRETS_CONFIG)
  ADD_DEFINITIONS(${LIBRETS_CFLAGS})
ELSE (LIBRETS_CONFIG)
  INCLUDE_DIRECTORIES(${LIBRETS_INCLUDE_DIRECTORY})
ENDIF (LIBRETS_CONFIG)

INCLUDE_DIRECTORIES(BEFORE ${CMAKE_CURRENT_SOURCE_DIR}/../include)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})

IF (WIN32)
  ADD_DEFINITIONS(/D__WIN__)
ENDIF (WIN32)

FILE(GLOB COMMON_SRCS *.cpp)

SET(CMAKE_STATIC_LIBRARY_PREFIX)
add_library(ezrets-common STATIC ${COMMON_SRCS})
